public/css/post-menu.css
#post-menu {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 80%;
  height: 80%;
  padding: 1em;
  display: flex;
  flex-direction: column;
  border-radius: 10px;
  background-color: var(--color-1);
  box-shadow: inset 0px 0px 10px var(--color-2);
}

#post-body {
  height: 90%;
}

#post-title {
  font-size: larger;
}

#invalid-post-warning {
  color: rgb(255, 0, 0);
  text-decoration: underline;
  user-select: none;
  opacity: 0;
}

@keyframes showWarning {
  from {
    opacity: 100%;
  }
  to {
    opacity: 0%;
  }
}

.post-menu-actions {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 10px;
}

